--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -7,11 +7,11 @@
 <body>
     <h1>💘 Cynthia y Fer 💘</h1>
     <form method="post">
-        {% for i, q in enumerate(questions) %}
+        {% for q in questions %}
             <h3>{{ q.question }}</h3>
             {% for option in q.options %}
                 <label>
-                    <input type="radio" name="q{{ i }}" value="{{ option }}" required> {{ option }}
+                    <input type="radio" name="q{{ loop.index0 }}" value="{{ option }}" required> {{ option }}
                 </label><br>
             {% endfor %}
             <br>
