--- a/templates/question.html
+++ b/templates/question.html
@@ -8,9 +8,10 @@
             text-align: center;
             font-family: 'Segoe UI', sans-serif;
             padding: 50px;
-            background-image: url('https://i.imgur.com/6oK9G4o.jpg');
+            background-image: url('https://images.unsplash.com/photo-1607082349566-187342175e2c?ixlib=rb-4.0.3&auto=format&fit=crop&w=1500&q=80');
             background-size: cover;
             background-position: center;
+            background-attachment: fixed;
             color: #4e0034;
         }
         form {
