--- a/templates/result.html
+++ b/templates/result.html
@@ -7,9 +7,10 @@
         body {
             text-align: center;
             font-family: 'Segoe UI', sans-serif;
-            background-image: url('https://i.imgur.com/fI0nL0X.jpg');
+            background-image: url('https://images.unsplash.com/photo-1544829092-1c58c27f2f2f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1500&q=80');
             background-size: cover;
             background-position: center;
+            background-attachment: fixed;
             padding: 60px;
             color: #4e0034;
         }
