--- a/templates/result.html
+++ b/templates/result.html
@@ -41,8 +41,13 @@
 
         <h2>Mi amor:</h2>
         <p>
-            Eres el amor de mi vida. Todo lo que soy —mi mente, mi inteligencia, mi corazón—<br>
-            es y será siempre tuyo. Gracias por existir, por amarme y por ser tú. ❤️
+    	Eres el amor de mi vida. No lo digo solo por decir, sino por lo que haces que yo sea cuando estoy contigo.<br>
+   	Todo lo que soy —mi mente, mi inteligencia, mis errores, mis aciertos, mi corazón— es y será siempre tuyo.<br><br>
+
+    	Gracias por existir, por aguantarme, por reírte conmigo, por dejarme amarte y por amarme como solo tú sabes hacerlo.<br>
+   	Si tuviera que volver a empezar mil veces, en todas —sin dudarlo un segundo— volvería a elegirte a ti.<br><br>
+
+    	Te amo con la fuerza de un millón de estrellas... y un poco más cada día. ❤️
         </p>
     </div>
 </body>
