--- a/templates/result.html
+++ b/templates/result.html
@@ -39,7 +39,7 @@
         <h1>¡Resultado del Quiz Romántico!</h1>
         <p>Obtuviste {{ score }} de {{ total }} respuestas correctas.</p>
 
-        <h2>Mi amor:</h2>
+        <h2>Cynthia, mi amor:</h2>
         <p>
     	Eres el amor de mi vida. No lo digo solo por decir, sino por lo que haces que yo sea cuando estoy contigo.<br>
    	Todo lo que soy —mi mente, mi inteligencia, mis errores, mis aciertos, mi corazón— es y será siempre tuyo.<br><br>
